--- a/templates/header.html
+++ b/templates/header.html
@@ -8,5 +8,5 @@
     <div class="well text-center">
         <h1> Python Flask CRUD Web Application Development </h1>
     </div>
-
+</div>
 {% endblock %}
