--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,108 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% include "header.html" %}
 
 {% block title %} Home {% endblock %}
 
 {% block body %}
 
-<h1> From Template Inheritance </h1>
+<div class="center">
+    <div class="row">
+        <div class="col md-12">
+            <div class="jumbotron p-3">
+                <h2> Manage <b> Employees </b> <button type="botton" class="btn btn-success float-right"
+                    data-toggle="modal" data-target="#mymodal"> Add New Employee </button> </h2>
+            
+                <table class="table table-hover table-dark">
+                    <tr>
+                        <th> ID </th>
+                        <th> Name </th>
+                        <th> Email </th>
+                        <th> Phone Number </th>
+                        <th> Action </th>
+                    </tr>
+                    <tr>
+                        <td> 01 </td>
+                        <td> Ramiz </td>
+                        <td> ramiz@gmail.com </td>
+                        <td> 0123456789 </td>
+                        <td>
+                            <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit"> Edit </a>
+                            <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure you wish to delete?')"> Delete </a>
+                        </td>
+                    </tr>
+                    <!-- Modal Edit-->
+
+<div id="modaledit" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">   
+                <h4 class="modal-title"> Update </h4>
+            </div>
+            <div class="modal-body">
+                <form action="" method="POST">
+                    <div class="form-group">
+                        <label> Name: </label>
+                        <input type="hidden" name="id" value="id">
+                        <input type="text" class="form-control" name="name" value="ramiz">
+                    </div>
+                    <div class="form-group">
+                        <label> Email: </label>
+                        <input type="text" class="form-control" name="email" value="ramiz@gmail.com"> 
+                    </div>
+                    <div class="form-group">
+                        <label> Phone Number: </label>
+                        <input type="text" class="form-control" name="phone" value="0123456789">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary" type="submit"> Update </button>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close </button>
+            </div>
+        </div>
+    </div>
+</div>
+                </table>
+            </div>
+
+                    <!-- Modal Add Employees-->
+
+<div id="mymodal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+
+                <h4 class="modal-title"> Add Employee </h4>
+            </div>
+            <div class="modal-body">
+                <form action="" method="POST">
+                    <div class="form-group">
+                        <label> Name: </label>
+                        <input type="text" class="form-control" name="name" required="1">
+                    </div>
+                    <div class="form-group">
+                        <label> Email: </label>
+                        <input type="text" class="form-control" name="email" required="1"> 
+                    </div>
+                    <div class="form-group">
+                        <label> Phone Number: </label>
+                        <input type="number" class="form-control" name="phone" required="1">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary" type="submit"> Add Employee </button>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close </button>
+            </div>
+        </div>
+    </div>
+</div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
